--- a/.github/workflows/sample_checkmarx.yaml
+++ b/.github/workflows/sample_checkmarx.yaml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            github.checks.create({
+            await github.rest.checks.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
               name: "Checkmarx",
