--- a/.github/workflows/sample_tool.yaml
+++ b/.github/workflows/sample_tool.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Comment on PR
         uses: peter-evans/create-or-update-comment@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TOKEN }}
           issue-number: ${{ github.event.check_run.pull_requests[0].number }}
           body: |
             🛠️ **Vulnerability remediations started** for this PR!
