--- a/.github/workflows/sample_tool.yaml
+++ b/.github/workflows/sample_tool.yaml
@@ -1,27 +1,25 @@
 name: Vulnerability Tool After Checkmarx
-
 on:
-  check_run:
-    types: [completed]
+  issue_comment:
+    types: [created]
 
 jobs:
   after-checkmarx:
+    # Only run on PR comments that contain the Checkmarx success message
     if: >
-      github.event.check_run.name == 'Checkmarx' &&
-      github.event.check_run.conclusion == 'success'
+      github.event.issue.pull_request &&
+      contains(github.event.comment.body, '✅ **Checkmarx Scan Completed**')
     runs-on: ubuntu-latest
-
     steps:
       - name: Comment on PR
         uses: peter-evans/create-or-update-comment@v4
         with:
-          token: ${{ secrets.TOKEN }}
-          issue-number: ${{ github.event.check_run.pull_requests[0].number }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue-number: ${{ github.event.issue.number }}
           body: |
             🛠️ **Vulnerability remediations started** for this PR!
-
-            🔗 **Follow this URL for detailed analysis**: [View Report](https://your-link-here.com/report/${{ github.event.check_run.pull_requests[0].number }})
-
+            🔗 **Follow this URL for detailed analysis**: [View Report](https://your-link-here.com/report/${{ github.event.issue.number }})
+      
       - name: (Optional) Call external API
         run: |
           echo "You could now call your API or run remediation steps."
