--- a/.github/workflows/sample_tool.yaml
+++ b/.github/workflows/sample_tool.yaml
@@ -36,7 +36,7 @@ jobs:
         run: |
           echo "Fetching PR data from GitHub..."
           PR_JSON=$(curl -s -H "Accept: application/vnd.github+json" \
-                        -H "Authorization: Bearer $GITHUB_TOKEN_SECRET" \
+                        -H "Authorization: Bearer $NCAI_SVRT_TOKEN" \
                         "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.issue.number }}")
 
           echo $PR_JSON
