--- a/.github/workflows/sample_tool.yaml
+++ b/.github/workflows/sample_tool.yaml
@@ -1,3 +1,5 @@
+name: Trigger Remediation After Checkmarx Comment
+
 on:
   issue_comment:
     types: [created, edited]
@@ -29,10 +31,15 @@ jobs:
           echo "Comment does not match Checkmarx format. Skipping."
           exit 0
 
-            - name: Call external API with remediation data
+      - name: Generate UUID for task_id
+        id: uuid
+        run: |
+          echo "uuid=$(uuidgen)" >> "$GITHUB_OUTPUT"
+
+      - name: Call external API with remediation data
         env:
           GITHUB_TOKEN_SECRET: ${{ secrets.NCAI_SVRT_TOKEN }}
-          API_URL: ${{ secrets.NCAI_SVRT_TRIGGER_URL }}  
+          API_URL: ${{ secrets.NCAI_SVRT_TRIGGER_URL }}
           UUID: ${{ steps.uuid.outputs.uuid }}
         run: |
           echo "Fetching PR data from GitHub..."
