--- a/.github/workflows/sample_tool.yaml
+++ b/.github/workflows/sample_tool.yaml
@@ -14,26 +14,29 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.issue.pull_request != null
     steps:
-      - name: Check if comment is a Checkmarx summary
+      - name: Check if comment is from Checkmarx bot and matches expected format
         id: check-comment
         run: |
           COMMENT_BODY="${{ github.event.comment.body }}"
+          COMMENT_AUTHOR="${{ github.event.comment.user.login }}"
+          echo "Comment author: $COMMENT_AUTHOR"
           echo "Comment body: $COMMENT_BODY"
 
-          # Match only Checkmarx summary and skip remediation or unrelated comments
-          if echo "$COMMENT_BODY" | grep -q -E 'Checkmarx One[[:space:]]*–[[:space:]]*Scan Summary'; then
-            echo "✅ Detected Checkmarx scan summary"
+          # Only proceed if author is Checkmarx bot AND body matches the pattern
+          if [[ "$COMMENT_AUTHOR" == "riyanshguptanewscorp" ]] && \
+             echo "$COMMENT_BODY" | grep -q -E 'Checkmarx One[[:space:]]*–[[:space:]]*Scan Summary'; then
+            echo "✅ Valid Checkmarx comment by $COMMENT_AUTHOR"
             echo "match=true" >> "$GITHUB_OUTPUT"
           else
-            echo "⛔ Not a Checkmarx comment. Skipping."
+            echo "⛔ Not a valid Checkmarx comment. Skipping."
             echo "match=false" >> "$GITHUB_OUTPUT"
           fi
         shell: bash
 
-      - name: Stop if comment is not a Checkmarx summary
+      - name: Stop if comment is not a valid Checkmarx comment
         if: steps.check-comment.outputs.match != 'true'
         run: |
-          echo "Comment does not match Checkmarx format. Skipping."
+          echo "Comment did not meet Checkmarx requirements. Exiting."
           exit 0
 
       - name: Call external API with remediation data
@@ -53,9 +56,6 @@ jobs:
           OWNER_NAME=$(echo "$PR_JSON" | jq -r '.head.repo.owner.login')
           ISSUE_NUMBER="${{ github.event.issue.number }}"
 
-          # Encode the token as base64(username:token)
-          ENCODED_AUTH=$(echo -n "x-access-token:$GITHUB_TOKEN_SECRET" | base64)
-          
           PAYLOAD=$(jq -n \
             --arg url "$GITHUB_URL" \
             --arg default_branch "$BASE_BRANCH" \
@@ -76,7 +76,7 @@ jobs:
           for i in {1..3}; do
             response=$(curl -s -o response.txt -w "%{http_code}" -X POST "$API_URL" \
                       -H "Content-Type: application/json" \
-                      -H "Authorization: Bearer $ENCODED_AUTH" \
+                      -H "Authorization: Bearer $GITHUB_TOKEN_SECRET" \
                       -d "$PAYLOAD")
             if [ "$response" -ge 200 ] && [ "$response" -lt 300 ]; then
               echo "✅ Successfully sent remediation start."
