--- a/.github/workflows/sample_tool.yaml
+++ b/.github/workflows/sample_tool.yaml
@@ -1,3 +1,5 @@
+name: Trigger Remediation After Checkmarx Comment
+
 on:
   issue_comment:
     types: [created, edited]
@@ -9,32 +11,36 @@ permissions:
 
 jobs:
   after-checkmarx:
-    if: github.event.issue.pull_request != null
     runs-on: ubuntu-latest
+    if: github.event.issue.pull_request != null
 
     steps:
-      - name: Only continue if the triggering comment is the Checkmarx scan summary
+      - name: Check if comment is from Checkmarx and matches pattern
         id: check-comment
         run: |
           COMMENT="${{ github.event.comment.body }}"
-
+          AUTHOR="${{ github.event.comment.user.login }}"
           echo "Triggering comment: $COMMENT"
+          echo "Author: $AUTHOR"
 
-          # Only proceed if this specific comment is the Checkmarx summary
-          if echo "$COMMENT" | grep -q -E 'Checkmarx One[[:space:]]*-[[:space:]]*Scan Summary'; then
-            echo "match=true" >> "$GITHUB_OUTPUT"
-          else
-            echo "match=false" >> "$GITHUB_OUTPUT"
+          IS_MATCH=false
+
+          if echo "$COMMENT" | grep -q -E 'Checkmarx One[[:space:]]*–[[:space:]]*Scan Summary'; then
+            if [ "$AUTHOR" = "riyanshguptanewscorp" ]; then
+              IS_MATCH=true
+            fi
           fi
+
+          echo "match=$IS_MATCH" >> "$GITHUB_OUTPUT"
         shell: bash
 
-      - name: Stop if comment is not Checkmarx
+      - name: Skip if not Checkmarx pattern or not expected author
         if: steps.check-comment.outputs.match != 'true'
         run: |
-          echo "This comment is not a Checkmarx scan summary. Skipping remediation trigger."
-          exit 0
+          echo "Comment did not match both Checkmarx pattern and author. Skipping."
 
       - name: Call external API with remediation data
+        if: steps.check-comment.outputs.match == 'true'
         env:
           GITHUB_TOKEN_SECRET: ${{ secrets.NCAI_SVRT_TOKEN }}
           API_URL: ${{ vars.NCAI_SVRT_TRIGGER_URL }}
@@ -50,10 +56,6 @@ jobs:
           REPO_NAME=$(echo "$PR_JSON" | jq -r '.head.repo.name')
           OWNER_NAME=$(echo "$PR_JSON" | jq -r '.head.repo.owner.login')
           ISSUE_NUMBER="${{ github.event.issue.number }}"
-
-          # Encode the token as base64(username:token)
-          ENCODED_AUTH=$(echo -n "x-access-token:$GITHUB_TOKEN_SECRET" | base64)
-
 
           PAYLOAD=$(jq -n \
             --arg url "$GITHUB_URL" \
@@ -75,7 +77,7 @@ jobs:
           for i in {1..3}; do
             response=$(curl -s -o response.txt -w "%{http_code}" -X POST "$API_URL" \
                       -H "Content-Type: application/json" \
-                      -H "Authorization: Bearer $ENCODED_AUTH" \
+                      -H "Authorization: Bearer $GITHUB_TOKEN_SECRET" \
                       -d "$PAYLOAD")
             if [ "$response" -ge 200 ] && [ "$response" -lt 300 ]; then
               echo "✅ Successfully sent remediation start."
