--- a/.github/workflows/sample_tool.yaml
+++ b/.github/workflows/sample_tool.yaml
@@ -57,6 +57,9 @@ jobs:
           OWNER_NAME=$(echo "$PR_JSON" | jq -r '.head.repo.owner.login')
           ISSUE_NUMBER="${{ github.event.issue.number }}"
 
+          # Encode the token as base64(username:token)
+          ENCODED_AUTH=$(echo -n "x-access-token:$GITHUB_TOKEN_SECRET" | base64)
+          
           PAYLOAD=$(jq -n \
             --arg url "$GITHUB_URL" \
             --arg default_branch "$BASE_BRANCH" \
@@ -77,7 +80,7 @@ jobs:
           for i in {1..3}; do
             response=$(curl -s -o response.txt -w "%{http_code}" -X POST "$API_URL" \
                       -H "Content-Type: application/json" \
-                      -H "Authorization: Bearer $GITHUB_TOKEN_SECRET" \
+                      -H "Authorization: Bearer $ENCODED_AUTH" \
                       -d "$PAYLOAD")
             if [ "$response" -ge 200 ] && [ "$response" -lt 300 ]; then
               echo "✅ Successfully sent remediation start."
